fixed spacing for mobile (tested note 2 and several apple devices); fixed button spacing; updated fonts; added about and contact pages

--- a/app/sass/_grid.scss
+++ b/app/sass/_grid.scss
@@ -166,6 +166,7 @@ ul { font-size: 3.0rem; }
   h4 { font-size: 1.7rem; }
   h5 { font-size: 1.4rem; }
   h6 { font-size: 1.1rem; }
+  ul { font-size: 2.3rem;}
 }
 /* Larger than mobile */
 @media screen and (min-width: 350px) {
@@ -175,7 +176,7 @@ ul { font-size: 3.0rem; }
   h4 { font-size: 1.4rem; }
   h5 { font-size: 1.1rem; }
   h6 { font-size: 1.0rem; }
-  ul { font-size: 1.7rem; }
+  ul { font-size: 1.4rem; }
 }
 p {
   margin-top: 0; }
