--- a/app/sass/application.scss
+++ b/app/sass/application.scss
@@ -55,6 +55,7 @@ button {
 button {
   display: block;
   vertical-align: bottom;
+  font-family: Rhodium Libre, sans-serif;
 }
 .button__logout {
   margin: 0;
@@ -65,11 +66,31 @@ button {
 ul {
   margin-left: 10%;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 350px) {
   header { padding-left: 10%;}
-  body { padding: 0;}
+  body { padding: 0; margin: 2%;}
+  main { padding: 2%; margin: 2%;}
+  ul { padding: 0; margin: 0; width: auto;}
+  li { padding: 0; margin: 0; width: auto;}
 }
 .even {
     background-color: lighten($primary, 15%);
-    width: 40%;
+    width: auto;
+}
+.body--text {
+  font-family: Rhodium Libre, sans-serif;
+
+}
+.about {
+  font-family: Rhodium Libre;
+  display: inline;
+  padding: 0;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+}
+.main--about {
+  margin-left: 15%;
+  margin-right: 15%;
 }
